<resources>
    <string name="app_name">TegB_Demo_App</string>
    <string name="txt_face_id_icon">Face ID icon</string>
    <string name="btn_login_with_email">Login With Email</string>
    <string name="btn_create_an_account">Create an Account</string>
    <string name="btn_continue_as_guest">Continue as Guest</string>
    <string name="txt_business">Business</string>
    <string name="txt_personal">Personal</string>
    <string name="txt_email_id">Email Id</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_or">Or</string>
    <string name="txt_continue_with_apple">Continue with Apple</string>
    <string name="txt_google">Google</string>
    <string name="txt_facebook">faceBook</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="tv_mobile_number">Mobile Number</string>
    <string name="txt_termsAndCondition"> By clicking create account you agree to RunParking Terms of Uses and Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_add_promocode">Add PromoCode</string>
    <string name="btn_save">Save</string>
    <string name="hint_promocode_eg_tag50">Eg: TAG50</string>
    <string name="txt_heading">Heading</string>
    <string name="tv_expiring_on">Expiring On: </string>
    <string name="tv_usage">Usage: </string>
    <string name="tv_discount">Discount: </string>
    <string name="btn_promocode">PromoCode</string>
    <string name="tv_tegb_demo_app_title">TegB Demo App</string>
    <string name="title_customer_login">Customer Login</string>
    <string name="title_customer_signup">Customer Sign-Up</string>
    <string name="btn_logout">LogOut</string>
    <string name="txt_logo">logo</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_parking_location">Parking Location</string>
    <string name="txt_home">Home</string>
    <string name="first_name_require">FirstName Required</string>
    <string name="last_name_require">LastName Required</string>
    <string name="email_require">Email Required</string>
    <string name="mobileNumber_require">Mobile Number Required</string>
    <string name="password_require">Password Required</string>
    <string name="wrong_credential">Wrong Credential</string>
    <string name="_2478">2478</string>
    <string name="idstring">%d</string>
    <string name="txt_work_in_progress">Work in Progress</string>
    <string name="message">message</string>
    <string name="nullResponse">null Response\n</string>
</resources>