<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10dp"
    android:layout_marginVertical="@dimen/_10dp"
    app:cardCornerRadius="@dimen/_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_heading"
            style="@style/TextStyle20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/shimmer_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_heading" />

        <TextView
            android:id="@+id/tv_expiring_on"
            style="@style/TextStyle16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/shimmer_placeholder"
            android:layout_marginTop="@dimen/_10dp"
            tools:text="@string/tv_expiring_on"
            app:layout_constraintStart_toStartOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_heading" />

        <TextView
            android:id="@+id/tv_expiring_detail"
            style="@style/TextStyle16spGray"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:background="@color/shimmer_placeholder"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_expiring_on"
            app:layout_constraintTop_toTopOf="@+id/tv_expiring_on"
            tools:text="@string/tv_expiring_on" />

        <TextView
            android:id="@+id/tv_discount"
            style="@style/TextStyle16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/shimmer_placeholder"
            android:layout_marginTop="@dimen/_10dp"
            tools:text="@string/tv_discount"
            app:layout_constraintStart_toStartOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_expiring_on" />

        <TextView
            android:id="@+id/tv_discount_detail"
            style="@style/TextStyle16spGray"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:background="@color/shimmer_placeholder"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_discount"
            app:layout_constraintTop_toTopOf="@+id/tv_discount"
            tools:text="@string/tv_expiring_on" />

        <TextView
            android:id="@+id/tv_usage"
            style="@style/TextStyle16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/shimmer_placeholder"
            tools:text="@string/tv_usage"
            app:layout_constraintStart_toStartOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_discount" />

        <TextView
            android:id="@+id/tv_usage_detail"
            style="@style/TextStyle16spGray"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:background="@color/shimmer_placeholder"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_usage"
            app:layout_constraintTop_toTopOf="@+id/tv_usage"
            tools:text="@string/tv_expiring_on" />

        <TextView
            android:id="@+id/btn_promo_code"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@color/shimmer_placeholder"
            tools:text="@string/btn_promocode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_usage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>