<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PromoCodeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/left_guide"
        app:layout_constraintGuide_begin="@dimen/_16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/right_guide"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_add_promo_code"
        android:text="@string/txt_add_promocode"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_guide"/>

    <EditText
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_48dp"
        android:id="@+id/et_promo_code"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:paddingStart="@dimen/_10dp"
        android:background="@drawable/edit_text_simple_boarder"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/tv_add_promo_code"
        android:hint="@string/hint_promocode_eg_tag50"
        android:autofillHints="Eg: TAG50"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="@string/btn_save"
        android:backgroundTint="@color/deepAqua"
        style="@style/ThemeOverlay.Material3.Button.TagB"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/et_promo_code"
        app:layout_constraintTop_toTopOf="@id/et_promo_code"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintBottom_toBottomOf="@id/et_promo_code"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:id="@+id/rv_promo_code"
        tools:listitem="@layout/item_promocode_list"
        app:layout_constraintTop_toBottomOf="@id/et_promo_code"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>